Handling semicolons.